@@ -4,17 +4,31 @@ import com.github.javafaker.Faker;
 import com.sarabrandserver.AbstractIntegrationTest;
 import com.sarabrandserver.category.dto.CategoryDTO;
 import com.sarabrandserver.category.dto.UpdateCategoryDTO;
+import com.sarabrandserver.category.entity.ProductCategory;
+import com.sarabrandserver.category.repository.CategoryRepository;
+import com.sarabrandserver.category.service.WorkerCategoryService;
+import com.sarabrandserver.data.TestingData;
 import com.sarabrandserver.exception.DuplicateException;
 import com.sarabrandserver.exception.ResourceAttachedException;
+import com.sarabrandserver.product.repository.ProductDetailRepo;
+import com.sarabrandserver.product.repository.ProductRepo;
+import com.sarabrandserver.product.repository.ProductSkuRepo;
+import com.sarabrandserver.product.service.WorkerProductService;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.security.test.context.support.WithMockUser;
+
+import java.util.HashSet;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.springframework.http.MediaType.APPLICATION_JSON;
 import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.csrf;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
@@ -23,10 +37,58 @@ class WorkerCategoryControllerTest extends AbstractIntegrationTest {
     @Value(value = "/${api.endpoint.baseurl}worker/category")
     private String requestMapping;
 
+    @Autowired
+    private WorkerProductService workerProductService;
+    @Autowired
+    private ProductRepo productRepo;
+    @Autowired
+    private ProductSkuRepo productSkuRepo;
+    @Autowired
+    private ProductDetailRepo productDetailRepo;
+    @Autowired
+    private CategoryRepository categoryRepository;
+
+    @BeforeEach
+    void before() {
+        var category = categoryRepository
+                .save(
+                        ProductCategory.builder()
+                                .name("category")
+                                .isVisible(false)
+                                .parentCategory(null)
+                                .categories(new HashSet<>())
+                                .product(new HashSet<>())
+                                .build()
+                );
+
+        TestingData.dummyProducts(category, 2, workerProductService);
+
+        var clothes = categoryRepository
+                .save(
+                        ProductCategory.builder()
+                                .name("clothes")
+                                .isVisible(false)
+                                .parentCategory(category)
+                                .categories(new HashSet<>())
+                                .product(new HashSet<>())
+                                .build()
+                );
+
+        TestingData.dummyProducts(clothes, 5, workerProductService);
+    }
+
+    @AfterEach
+    void after() {
+        productSkuRepo.deleteAll();
+        productDetailRepo.deleteAll();
+        productRepo.deleteAll();
+        categoryRepository.deleteAll();
+    }
+
     private String category() {
         var list = this.categoryRepository.findAll();
         assertFalse(list.isEmpty());
-        return list.get(0).getName();
+        return list.getFirst().getName();
     }
 
     @Test
@@ -35,6 +97,7 @@ class WorkerCategoryControllerTest extends AbstractIntegrationTest {
         // Then
         this.MOCKMVC
                 .perform(get(requestMapping).contentType(APPLICATION_JSON))
+                .andDo(print())
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray());
     }
@@ -79,7 +142,7 @@ class WorkerCategoryControllerTest extends AbstractIntegrationTest {
     @DisplayName(value = "Testing updating a ProductCategory")
     void update() throws Exception {
         // Given
-        var category = this.categoryRepository.findAll().get(0);
+        var category = this.categoryRepository.findAll().getFirst();
         var dto = new UpdateCategoryDTO(category.getCategoryId(), "Updated", category.isVisible());
 
         // Then
@@ -98,9 +161,9 @@ class WorkerCategoryControllerTest extends AbstractIntegrationTest {
     void ex() throws Exception {
         // Given
         var category = this.categoryRepository.findAll();
-        // First category
-        var first = category.get(0);
-        // second category
+        // First categoryId
+        var first = category.getFirst();
+        // second categoryId
         var second = category.get(1);
         // dto
         var dto = new UpdateCategoryDTO(first.getCategoryId(), second.getName(), first.isVisible());
