@@ -1,9 +1,21 @@
 package com.sarabrandserver.product.controller;
 
 import com.sarabrandserver.AbstractIntegrationTest;
+import com.sarabrandserver.category.entity.ProductCategory;
+import com.sarabrandserver.category.repository.CategoryRepository;
+import com.sarabrandserver.data.TestingData;
+import com.sarabrandserver.product.repository.ProductDetailRepo;
+import com.sarabrandserver.product.repository.ProductRepo;
+import com.sarabrandserver.product.repository.ProductSkuRepo;
+import com.sarabrandserver.product.service.WorkerProductService;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.annotation.Value;
 
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Random;
 
 import static org.hamcrest.Matchers.hasItems;
@@ -15,7 +27,56 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 class ClientProductControllerTest extends AbstractIntegrationTest {
 
-    final String path = "/api/v1/client/product";
+    @Value(value = "/${api.endpoint.baseurl}client/product")
+    private String path;
+
+    @Autowired
+    private WorkerProductService workerProductService;
+    @Autowired
+    private ProductRepo productRepo;
+    @Autowired
+    private ProductSkuRepo productSkuRepo;
+    @Autowired
+    private ProductDetailRepo productDetailRepo;
+    @Autowired
+    private CategoryRepository categoryRepository;
+
+    @BeforeEach
+    void before() {
+        var category = categoryRepository
+                .save(
+                        ProductCategory.builder()
+                                .name("category")
+                                .isVisible(true)
+                                .parentCategory(null)
+                                .categories(new HashSet<>())
+                                .product(new HashSet<>())
+                                .build()
+                );
+
+        TestingData.dummyProducts(category, 2, workerProductService);
+
+        var clothes = categoryRepository
+                .save(
+                        ProductCategory.builder()
+                                .name("clothes")
+                                .isVisible(true)
+                                .parentCategory(category)
+                                .categories(new HashSet<>())
+                                .product(new HashSet<>())
+                                .build()
+                );
+
+        TestingData.dummyProducts(clothes, 5, workerProductService);
+    }
+
+    @AfterEach
+    void after() {
+        productSkuRepo.deleteAll();
+        productDetailRepo.deleteAll();
+        productRepo.deleteAll();
+        categoryRepository.deleteAll();
+    }
 
     @Test
     void search_functionality() throws Exception {
@@ -45,9 +106,9 @@ class ClientProductControllerTest extends AbstractIntegrationTest {
     void fetchProductDetails() throws Exception {
         var list = this.productRepo.findAll();
         assertFalse(list.isEmpty());
-        String id = list.get(0).getUuid();
+        String id = list.getFirst().getUuid();
 
-        String[] arr = new String[this.detailSize];
+        String[] arr = new String[3];
         Arrays.fill(arr, "0");
 
         this.MOCKMVC
@@ -56,7 +117,7 @@ class ClientProductControllerTest extends AbstractIntegrationTest {
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$").isArray())
                 .andExpect(jsonPath("$[*].variants").isArray())
-                .andExpect(jsonPath("$[*].variants.length()").value(this.detailSize))
+                .andExpect(jsonPath("$[*].variants.length()").value(3))
                 .andExpect(jsonPath("$[*].variants[*].inventory").value(hasItems(arr)));
     }
 
